// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms / Icon / Category / Graph 8px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

<div
  className="c0"
/>
`;

exports[`Storyshots Atoms / Icon / Category / Graph 16px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #212121;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        BuySellDots16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M6 3.828l2 2V3L5 0 2 3v2.828l2-2v6.167h2V3.828zM10 12.167l-2-2v2.828l3 3 3-3v-2.828l-2 2V6h-2v6.167z"
        fill="currentColor"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Candlesticks16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M5 0L5 2L7 2V10H5L5 16H3L3 10H1V2H3L3 0H5ZM3 8V4H5V8H3Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M15 6H13V0H11V6H9V14H11V16H13V14H15V6ZM13 12H11V8H13V12Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Compare16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M6.342 3.727L5.06.796.137 9.245l1.728 1.007 2.94-5.048.284.648-4.95 8.388 1.723 1.016 4.215-7.144 2.275 5.198 1.634-3.12 1.282 2.93 4.508-7.083-1.687-1.074-2.493 3.917-.42-.962L14.818.964 13.047.036 10.148 5.57 8.065.808l-1.723 2.92zm.989 2.26L8.513 8.69l.446-.85-1.16-2.648-.468.795z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Grid16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M4 16v-4H0v-2h4V6H0V4h4V0h2v4h4V0h2v4h4v2h-4v4h4v2h-4v4h-2v-4H6v4H4zm6-6V6H6v4h4z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        4
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        HighLow16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M10 5.58594L5 0.585938L0 5.58594V9.00015H10V5.58594ZM2 7.00015V6.41436L5 3.41436L8 6.41436V7.00015H2Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M6 10.4142V10.0002H8.41437L11 12.5858L14 9.58579V9H11V7L16 7V10.4142L11 15.4142L6 10.4142Z"
        fill="currentColor"
      />
      <title>
        5
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        LineGraph16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M16 1.11322V4.60081L11.2586 11.3743L5.25855 7.37431L0 14.8865V11.3989L4.74124 4.62573L10.7412 8.62573L16 1.11322Z"
        fill="currentColor"
      />
      <title>
        6
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Logarithmic16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M0 16C0 7.16344 7.16344 0 16 0V2C8.26801 2 2 8.26801 2 16H0Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        7
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Ohlc16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M13 0H11V2H9V4H11V12H13V10H15V8H13V0Z"
        fill="currentColor"
      />
      <path
        d="M5 4H3V12H1V14H3V16H5V8H7V6H5V4Z"
        fill="currentColor"
      />
      <title>
        8
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        PriceMarker16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M13.3339 9L11.0009 9V7L12.2636 7L13.5969 5L12.2636 3H8.00031V6H6.00031V1L13.3339 1L16.0006 5L13.3339 9Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M10.0006 7L2.66667 7L0 11L2.66667 15L10.0006 15V7ZM2.4037 11L3.73703 9L8.00056 9V13L3.73703 13L2.4037 11Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        9
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        SplitAdjusted16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M10.1709 0L12.1709 2H8.58579L3.58579 7H0V9H3.58579L8.58579 14H12.1719L10.1719 16H13.0004L16.0003 13L13.0004 10H10.1719L12.1719 12H9.41421L5.41421 8L9.41421 4H12.1709L10.1709 6H12.9994L15.9993 3L12.9994 0H10.1709Z"
        fill="currentColor"
      />
      <title>
        10
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        TechnicalAnalysis16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M11.0003 11C11.7526 11 12.3923 10.6342 12.8963 10.1962C13.4049 9.75413 13.8675 9.16001 14.2872 8.51291C14.8903 7.58318 15.4648 6.44882 16 5.28059V0.18869C15.8593 0.523084 15.7151 0.869606 15.5685 1.22186C15.3099 1.84332 15.0438 2.48283 14.7762 3.1048C14.0786 4.72626 13.3498 6.2829 12.6093 7.42455C12.2385 7.9962 11.8938 8.41771 11.5844 8.68662C11.2703 8.95954 11.0814 8.99999 11.0003 8.99999C10.3965 9 10.0372 8.82905 9.75858 8.60105C9.43587 8.33702 9.18136 7.96873 8.83242 7.44532L8.80265 7.40062C8.48902 6.92975 8.08419 6.32196 7.50861 5.85104C6.8706 5.32903 6.06322 4.99999 5.00032 4.99999C4.24804 4.99999 3.60828 5.36579 3.10429 5.80382C2.5957 6.24586 2.13315 6.83998 1.71344 7.48709C1.11013 8.41726 0.535417 9.55225 0 10.7211V15.8134C0.141119 15.4781 0.285711 15.1306 0.432698 14.7773C0.691221 14.1561 0.957154 13.517 1.22463 12.8952C1.92215 11.2737 2.65093 9.71706 3.3914 8.5754C3.76217 8.00376 4.10688 7.58226 4.41628 7.31336C4.73028 7.04045 4.91923 6.99999 5.00032 6.99999C5.60415 6.99999 5.96347 7.17095 6.24214 7.39896C6.56486 7.66299 6.81938 8.03128 7.16831 8.55469L7.1981 8.59941C7.51172 9.07027 7.91654 9.67805 8.49209 10.149C9.13008 10.671 9.93744 11 11.0003 11Z"
        fill="currentColor"
      />
      <title>
        11
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Volume16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M15 0h-2v16h2V0ZM5 4h2v12H5V4Zm6 4H9v8h2V8Zm-8 2H1v6h2v-6Z"
        fill="currentColor"
      />
      <title>
        12
      </title>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms / Icon / Category / Graph 24px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #212121;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        BarGraph24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M21 1v18h-2V1h2Zm-4 18V9h-2v10h2ZM5 19v-8H3v8h2Zm17 2H2v2h20v-2ZM9 15v4H7v-4h2Zm4 4V5h-2v14h2Z"
        fill="currentColor"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        BuySellDots24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M12 8.828l-4-4v10.167H6V4.828l-4 4V6l5-5 5 5v2.828zM12 15.167l4 4V9h2v10.167l4-4v2.828l-5 5-5-5v-2.828z"
        fill="currentColor"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Candlesticks24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M8 1L8 5H10V15H8L8 23H6L6 15H4V5H6L6 1H8ZM6 13V7H8V13H6Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M20 9H18V1H16V9H14V19H16V23H18V19H20V9ZM18 17H16V11H18V17Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Compare24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M11 5L6.443 5L9 11.8187V12C9 14.2123 7.21229 16 5 16C2.78772 16 1 14.2123 1 12V11.8187L4.307 3H19.693L23 11.8187V12C23 14.2123 21.2123 16 19 16C16.7877 16 15 14.2123 15 12V11.8187L17.557 5L13 5L13 21H16V23H8V21H11L11 5ZM6.182 10L5 6.848L3.818 10H6.182ZM6.932 12H3.068L3.00656 12.1638C3.08943 13.1944 3.94746 14 5 14C6.05254 14 6.91057 13.1944 6.99344 12.1638L6.932 12ZM19 6.848L17.818 10H20.182L19 6.848ZM17.0066 12.1638L17.068 12H20.932L20.9934 12.1638C20.9106 13.1944 20.0525 14 19 14C17.9475 14 17.0894 13.1944 17.0066 12.1638Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        4
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Grid24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M7 23v-6H1v-2h6V9H1V7h6V1h2v6h6V1h2v6h6v2h-6v6h6v2h-6v6h-2v-6H9v6H7zm8-8V9H9v6h6z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        5
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        HighLow24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M16 7.58578L9 0.585785L2 7.58578V13H16V7.58578ZM4 11V8.41421L9 3.41421L14 8.41421V11H4Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M8 16.4142V15H10V15.5858L15 20.5858L20 15.5858V13L18 13V11H22V16.4142L15 23.4142L8 16.4142Z"
        fill="currentColor"
      />
      <title>
        6
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        LineGraph24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M23 1.48694V5.5211L16.646 16.6518L7.97929 10.2882L1 22.5141V18.4799L7.35463 7.34824L16.0213 13.7119L23 1.48694Z"
        fill="currentColor"
      />
      <title>
        7
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Logarithmic24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M1 22C1 10.402 10.402 1 22 1H23V3H22C11.5066 3 3 11.5066 3 22V23H1V22Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        8
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Ohlc24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M19 1H17V4H14V6H17V19H19V16H22V14H19V1Z"
        fill="currentColor"
      />
      <path
        d="M7 5H5V18H2V20H5V23H7V10H10V8H7V5Z"
        fill="currentColor"
      />
      <title>
        9
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        PieGraph24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M3 12a9 9 0 0 1 9-9V1a11 11 0 1 0 11 11h-2a9 9 0 1 1-18 0Z"
        fill="currentColor"
      />
      <path
        d="M14.25 3.28a9.02 9.02 0 0 1 6.47 6.47l1.93-.5c-1-3.87-4.03-6.9-7.9-7.9l-.5 1.93Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M12 9a3 3 0 1 0 0 6 3 3 0 0 0 0-6Zm-1 3a1 1 0 1 1 2 0 1 1 0 0 1-2 0Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        10
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        PriceMarker24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M19.5 13H17V11H18.5L20.75 8L18.5 5L11 5L11 9H9V3H19.5L23.25 8L19.5 13Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M15 11H4.5L0.75 16L4.5 21H15V11ZM3.25 16L5.5 13H13V19H5.5L3.25 16Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        11
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        SaveGraph24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M19 19V1H21V19H19ZM15 19V5H17V19H15ZM11 19V9H13V19H11ZM7 19V12H9V19H7ZM3 19V15H5V19H3ZM22 23H2V21H22V23Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        12
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        SplitAdjusted24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M16.1709 3L18.1709 5H13.5858L7.58579 11H2V13H7.58579L13.5858 19H18.1719L16.1719 21H19.0004L22.0003 18L19.0004 15H16.1719L18.1719 17H14.4142L9.41421 12L14.4142 7H18.1709L16.1709 9H18.9994L21.9993 6L18.9994 3H16.1709Z"
        fill="currentColor"
      />
      <title>
        13
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        TechnicalAnalysis24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M1 22.6307V18.3548C1.13762 17.969 1.27827 17.5623 1.42494 17.1382C1.64152 16.5119 1.87124 15.8477 2.12369 15.1568C2.72007 13.5247 3.42478 11.8041 4.29885 10.4803C5.14847 9.19355 6.34695 8.00005 8.00069 8.00005C9.38589 8.00005 10.4071 8.47575 11.1947 9.20275C11.9152 9.86785 12.4173 10.7291 12.8326 11.4415L12.8645 11.4962C13.3179 12.2736 13.6836 12.885 14.1632 13.3277C14.5944 13.7257 15.1357 14 16.0006 14C16.5969 14 17.2735 13.5685 18.0333 12.4178C18.7687 11.304 19.4077 9.77472 19.9989 8.15681C20.2217 7.54706 20.4415 6.91261 20.6564 6.29241C20.9893 5.33136 21.3105 4.4044 21.6124 3.6568C21.8643 3.03316 22.1365 2.44402 22.4397 1.99711C22.5645 1.81313 22.7495 1.56995 23 1.36981V5.64795C22.8628 6.0327 22.7226 6.43823 22.5763 6.86107C22.3597 7.48754 22.1299 8.15203 21.8774 8.84319C21.2811 10.4753 20.5764 12.196 19.7023 13.5197C18.8528 14.8065 17.6543 16 16.0006 16C14.6154 16 13.5942 15.5243 12.8067 14.7973C12.0862 14.1322 11.5841 13.271 11.1688 12.5586L11.1369 12.5039C10.6835 11.7265 10.3178 11.1151 9.83812 10.6723C9.40696 10.2743 8.86565 10 8.00069 10C7.40428 10 6.72768 10.4315 5.96785 11.5823C5.23248 12.696 4.59341 14.2253 4.00221 15.8432C3.77948 16.4528 3.55972 17.087 3.34489 17.7069C3.01179 18.6682 2.69049 19.5955 2.38843 20.3433C2.13652 20.9669 1.86426 21.5561 1.56091 22.003C1.43592 22.1872 1.25076 22.4305 1 22.6307Z"
        fill="currentColor"
      />
      <title>
        14
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Volume24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M18 2h-2v20h2V2ZM6 7h2v15H6V7Zm7 5h-2v10h2V12ZM3 15H1v7h2v-7Zm20 0h-2v7h2v-7Z"
        fill="currentColor"
      />
      <title>
        15
      </title>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms / Icon / Category / Graph 32px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #212121;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        BarGraph32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M29 26V2h-2v24h2Zm-14 0h2V6h-2v20ZM5 26V16H3v10h2Zm25 4H2v-2h28v2ZM11 20v6H9v-6h2Zm12-8v14h-2V12h2Z"
        fill="currentColor"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        LineGraph32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M2 21.4291V24.3888L12.1751 13.2888L20.204 18.3069L30 6.7298V3.63354L19.7957 15.6932L11.8246 10.7113L2 21.4291Z"
        fill="currentColor"
      />
      <path
        d="M2 30H30V28H2V30Z"
        fill="currentColor"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        PieGraph32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M4 16A12 12 0 0 1 16 4V2a14 14 0 1 0 14 14h-2a12 12 0 0 1-24 0ZM18.47 4.26a12 12 0 0 1 9.29 9.34l1.96-.4A14.02 14.02 0 0 0 18.89 2.3l-.42 1.96Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M16 12a4 4 0 1 0 0 8 4 4 0 0 0 0-8Zm-2 4a2 2 0 1 1 4 0 2 2 0 0 1-4 0Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        SaveGraph32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M29 26V2h-2v24h2Zm-6 0h-2V6h2v20Zm-6 0V12h-2v14h2Zm-6-10v10H9V16h2ZM5 26v-6H3v6h2Zm25 4H2v-2h28v2Z"
        fill="currentColor"
      />
      <title>
        4
      </title>
    </svg>
  </div>
</div>
`;
